--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
 	<script src="js/ui-bootstrap-tpls.js"></script>
 	<script src="js/app.js"></script>
 	<script src="js/routes.js"></script>
+	<script src="js/services.js"></script>
 	<script src="js/main.js"></script>
 </head>
 <body>
