--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,15 @@
   <link rel="stylesheet" href="/css/main.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
 	<base href="/">
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+	<script src=""></script>
+	<!-- load jQuery 2.2.2 -->
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+
+<!--
+	<script type="text/javascript" src="https://code.jquery.com/jquery-1.7.min.js"></script>
+	<script type="text/javascript">
+	var jQuery_1_7 = $.noConflict(true);
+	</script> -->
 	<script src="https://code.angularjs.org/1.5.5/angular.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-route.js"></script>
 	<script src="js/ui-bootstrap-tpls.js"></script>
@@ -33,5 +41,7 @@
 	</div>
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+	<script src="libs/turnjs/turn.min.js"></script>
+<!-- 	<script src="js/custom.js"></script> -->
 </body>
 </html>
