added paypal authentication

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,15 @@
   <link rel="stylesheet" href="/css/main.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
 	<base href="/">
-	<script src=""></script>
+<!-- 	  <script src="https://cdn.shopify.com/s/assets/external/app.js"></script>
+  <script type="text/javascript">
+    ShopifyApp.init({
+      apiKey: '3476efb4a6d3e512814fed0fed881fc0',
+      shopOrigin: 'https://family-stories.myshopify.com',
+      debug: true,
+      forceRedirect: true
+    });
+  </script> -->
 	<!-- load jQuery 2.2.2 -->
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
 
@@ -31,7 +39,7 @@
 	<script src="js/main.js"></script>
 </head>
 <body>
-		<div class="total-wrapper">
+<div class="total-wrapper">
 		<div class="banner-wrapper">
 			<div class="banner">
 					<h1>Build A Book</h1>
