--- a/public/index.html
+++ b/public/index.html
@@ -50,6 +50,6 @@
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 	<script src="libs/turnjs/turn.min.js"></script>
-<!-- 	<script src="js/custom.js"></script> -->
+  <script src="js/custom.js"></script>
 </body>
 </html>
