--- a/index_hidden.html
+++ b/index_hidden.html
@@ -31,6 +31,7 @@
 	</script> -->
 	<script src="https://code.angularjs.org/1.5.5/angular.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-route.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-filter/0.5.8/angular-filter.min.js"></script>
 	<script src="js/ui-bootstrap-tpls.js"></script>
 	<script src="js/app.js"></script>
 	<script src="js/routes.js"></script>
