--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 <body>
   <h1>This site is coming soon</h1>
   <h3>If you are an admin please enter password:
-    <form method="POST">
+    <form action="admin_login" method="POST">
       <input name="password" type="password">
       <button>Enter</button>
     </form>
