reverted the previous changes, about to change nginx config to not attempt to serve folder

--- a/index.html
+++ b/index.html
@@ -2,9 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Document</title>
+  <title>Coming Soon</title>
 </head>
 <body>
-  <h1>Hello World</h1>
+  <h1>This site is coming soon</h1>
+  <h3>If you are an admin please enter password:
+    <form action="admin_login" method="POST">
+      <input name="password" type="password">
+      <button>Enter</button>
+    </form>
+  </h3>
 </body>
 </html>
