--- a/index_hidden.html
+++ b/index_hidden.html
@@ -62,6 +62,7 @@
           <ng-view></ng-view>
       </div>
   </div>
+  <div>TESTING VISIBILITY</div>
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 	<script src="libs/turnjs/turn.min.js"></script>
