added link to home page on the logo

--- a/index_hidden.html
+++ b/index_hidden.html
@@ -32,7 +32,7 @@
         <header>
             <a href="javascript:void(0);" class="burger-menu-symbol"></a>
 
-            <a href="javascript:void(0);" class="logo"><img src="../img/logo_header.png" alt="" /></a>
+            <a href="/" class="logo"><img src="../img/logo_header.png" alt="" /></a>
             <div class="header-info-block">
                 <div ng-controller="login as lgn" class="header-right-block">
                     <div class="lang">
