--- a/index_hidden.html
+++ b/index_hidden.html
@@ -19,6 +19,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-route.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-filter/0.5.8/angular-filter.min.js"></script>
     <script src="js/ui-bootstrap-tpls.js"></script>
+    <script src="js/slick.min.js"></script>
     <script src="js/app.js"></script>
     <script src="js/routes.js"></script>
     <script src="js/services.js"></script>
