--- a/index_hidden.html
+++ b/index_hidden.html
@@ -48,10 +48,10 @@
                 </div>
 
                 <ul class="header-menu">
-                    <li><a href="javascript:void(0);">Home</a></li>
-                    <li><a href="javascript:void(0);">Profile</a></li>
-                    <li><a href="javascript:void(0);">Settings</a></li>
-                    <li><a href="javascript:void(0);">About</a></li>
+                    <li><a href="/">Home</a></li>
+                    <li><a href="/about">About</a></li>
+                    <li><a href="/profile">Profile</a></li>
+                    <li><a href="/contact">Contact</a></li>
                 </ul>
                 <div class="clearfix"></div>
             </div>
