moved the class landing-page from the main template into its appropriate view, wrapped the view in a div with the class

--- a/index_hidden.html
+++ b/index_hidden.html
@@ -25,7 +25,7 @@
     <base href="/">
 </head>
 <body>
-    <div class="site-page landing-page">
+    <div class="site-page">
         <header>
             <a href="javascript:void(0);" class="burger-menu-symbol"></a>
 
