--- a/index_hidden.html
+++ b/index_hidden.html
@@ -20,6 +20,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-filter/0.5.8/angular-filter.min.js"></script>
     <script src="js/ui-bootstrap-tpls.js"></script>
     <script src="js/app.js"></script>
+    <script src="js/directives/bodyPropertyOptions.js"></script>
     <script src="js/routes.js"></script>
     <script src="js/services.js"></script>
     <script src="js/preview.js"></script>
