--- a/index_hidden.html
+++ b/index_hidden.html
@@ -22,6 +22,7 @@
     <script src="js/app.js"></script>
     <script src="js/directives/bodyPropertyOptions.js"></script>
     <script src="js/directives/bodyPropertyColors.js"></script>
+    <script src="js/directives/avatarPartSelectorPanes.js"></script>
     <script src="js/routes.js"></script>
     <script src="js/services.js"></script>
     <script src="js/preview.js"></script>
