--- a/index_hidden.html
+++ b/index_hidden.html
@@ -33,6 +33,7 @@
 <body>
     <div class="site-page">
         <header>
+            <div id="mobile-hook"></div>
             <a href="javascript:void(0);" class="burger-menu-symbol"></a>
 
             <a href="/" class="logo"><img src="../img/logo_header.png" alt="" /></a>
