removed color dropdown button for nose and glasses on mobile

--- a/public/js/directives/bodyPropertyColors.html
+++ b/public/js/directives/bodyPropertyColors.html
@@ -1,5 +1,5 @@
 <div class="color_wrapper">
-    <div class="desk_hide color_drop">&nbsp;</div>
+    <div class="desk_hide color_drop" ng-show="!ctrl.property.image_type.endsWith('nose') && !ctrl.property.image_type.endsWith('glasses')">&nbsp;</div>
     <div class="color-thumbs" ng-show="!ctrl.property.image_type.endsWith('nose') && !ctrl.property.image_type.endsWith('glasses')">
         <div ng-repeat="value in ctrl.property.values | unique: 'color_code'">
             <input id="radio_btn_color_{{value.image_id}}_{{value.color_name}}" type="radio" ng-value="value.color_code" name="radio_color_{{ctrl.property.image_type}}" ng-model="ctrl.colorCodes[ctrl.property.image_type]"></input>
